# EEE3097S-Project

./: .gitignore  LICENSE.md  README.md
Code/: 2fishencrypt.py
Code/sample_data/: EEE3097S_2022_Turntable_Example_Data.csv.lz  EEE3097S_2022_Walking_Around_Example_Data.csv.lz  t.csv
EEE3097S_Project/: .mxproject  .project  EEE3097S_Project.ioc
EEE3097S_Project/Core/Inc/: main.h
EEE3097S_Project/Core/Src/: demo_main.c  gpio.c  main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c  (+1 more)
EEE3097S_Project/Debug/: EEE3097S_Project.list  makefile  sources.mk
FPR_Code/: data_randomizer.py  main.py
FPR_Code/sample_data/: EEE3097S_2022_Turntable_Example_Data_2.csv.lz
First Draft Report/: EEE3097S_2022_PR_1_GROUP_20_YNGDAV005_SPRCAI002.docx
Paper Design/: Development Timeline.drawio  EEE3097S_2022_PAPER_DESIGN_GROUP_20_YNGDAV005_SPRCAI002.docx
Paper Design/EEE3097S_2022_PAPER_DESIGN_GROUP_20_YNGDAV005_SPRCAI002/: Backup of EEE3097S_2022_PAPER_DESIGN_GROUP_20_YNGDAV005_SPRCAI002.docx
PythonCode/: data-parser.py
SPR_Code/: README.md  demo.py  grapher.py  imu_test.py  stm_handler.py
SPR_Code/CLion/: CMakeLists.txt  main.c
SPR_Code/CLion/blowfish/: blowfish.c  blowfish.h
SPR_Code/CLion/crc32/: crc32.c  crc32.h
SPR_Code/CLion/heatshrink/: heatshrink_decoder.c  heatshrink_decoder.h  heatshrink_encoder.c  heatshrink_encoder.h
SPR_Code/EEE3097S_Project/: .mxproject
Second Draft Report/: Development Timeline - PR2.drawio  EEE3097S_2022_PR_2_GROUP_20_YNGDAV005_SPRCAI002.docx
sample_data/: t.csv
some code/: deflate.c  deflate.h  lzss.c  lzss.h  twofish.c  twofish.h
(+33 files in other folders)
